WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158209
[jsc][mips] fix JIT::emit_op_log_shadow_chicken_prologue/_tail
https://bugs.webkit.org/show_bug.cgi?id=158209
Summary
[jsc][mips] fix JIT::emit_op_log_shadow_chicken_prologue/_tail
Guillaume Emont
Reported
2016-05-30 09:58:28 PDT
Compilation on MIPS is broken because nonArgGPR0 is regT0 there. I am trying to run tests with a patch that uses regT4 instead to see if it breaks anything.
Attachments
Patch
(1.62 KB, patch)
2016-06-01 09:11 PDT
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Guillaume Emont
Comment 1
2016-06-01 09:11:29 PDT
Created
attachment 280241
[details]
Patch Patch fixing the issue. I ran the stress and regression tests and it does not seem to break anything new
Julien Brianceau
Comment 2
2016-06-06 09:57:05 PDT
If it does not break anything, it cannot hurt. LGTM
Mark Lam
Comment 3
2016-06-06 09:58:30 PDT
Comment on
attachment 280241
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2016-06-06 10:20:57 PDT
Comment on
attachment 280241
[details]
Patch Clearing flags on attachment: 280241 Committed
r201713
: <
http://trac.webkit.org/changeset/201713
>
WebKit Commit Bot
Comment 5
2016-06-06 10:21:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug