[jsc][mips] fix JIT::emit_op_log_shadow_chicken_prologue/_tail https://bugs.webkit.org/show_bug.cgi?id=158209

Patch by Guillaume Emont <guijemont@igalia.com> on 2016-06-06
Reviewed by Mark Lam.

On MIPS, changes GPRInfo::nonArgGPR0 to be regT4 instead of regT0,
since the code of JIT::emit_op_log_shadow_chicken_prologue/_tail()
expects nonArgGPR0 to be a different register from regT0 and regT2.

* jit/GPRInfo.h:

Canonical link: https://commits.webkit.org/176499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201713 268f45cc-cd09-0410-ab3c-d52691b4dbfc